Run juju 3.6 tests only on a nightly schedule

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,15 +7,14 @@ concurrency:
   cancel-in-progress: true
 
 on:
-# TODO: uncomment below before PR merge
-  # pull_request:
-  #   paths-ignore:
-  #     - '.gitignore'
-  #     - '.jujuignore'
-  #     - 'LICENSE'
-  #     - '**.md'
-  #     - .github/renovate.json5
-  #     - '.github/workflows/sync_docs.yaml'
+  pull_request:
+    paths-ignore:
+      - '.gitignore'
+      - '.jujuignore'
+      - 'LICENSE'
+      - '**.md'
+      - .github/renovate.json5
+      - '.github/workflows/sync_docs.yaml'
   schedule:
     - cron: '53 0 * * *' # Daily at 00:53 UTC
   # Triggered on push to branch "main" by .github/workflows/release.yaml
@@ -60,6 +59,8 @@ jobs:
             allure_on_amd64: false
           - agent: 3.4.6  # renovate: juju-agent-pin-minor
             allure_on_amd64: true
+          - snap_channel: 3.6/candidate
+            allure_on_amd64: false
         architecture:
           - amd64
         include:
@@ -67,7 +68,11 @@ jobs:
               agent: 3.4.6  # renovate: juju-agent-pin-minor
               allure_on_amd64: true
             architecture: arm64
-    name: Integration | ${{ matrix.juju.agent }} | ${{ matrix.architecture }}
+          - juju:
+              snap_channel: 3.6/candidate
+              allure_on_amd64: false
+            architecture: arm64
+    name: Integration | ${{ matrix.juju.agent || matrix.juju.snap_channel }} | ${{ matrix.architecture }}
     needs:
       - lint
       - unit-test
@@ -79,6 +84,7 @@ jobs:
       cloud: microk8s
       microk8s-snap-channel: 1.31-strict/stable  # renovate: latest microk8s
       juju-agent-version: ${{ matrix.juju.agent }}
+      juju-snap-channel: ${{ matrix.juju.snap_channel }}
       libjuju-version-constraint: ${{ matrix.juju.libjuju }}
       _beta_allure_report: ${{ matrix.juju.allure_on_amd64 && matrix.architecture == 'amd64' }}
     secrets:
