--- a/tox.ini
+++ b/tox.ini
@@ -6,14 +6,14 @@ no_package = True
 env_list = lint, unit
 
 [vars]
-src_path = {tox_root}/src
-tests_path = {tox_root}/tests
-lib_path = {tox_root}/lib/charms/postgresql_k8s
+src_path = "{tox_root}/src"
+tests_path = "{tox_root}/tests"
+lib_path = "{tox_root}/lib/charms/postgresql_k8s"
 all_path = {[vars]src_path} {[vars]tests_path} {[vars]lib_path}
 
 [testenv]
 set_env =
-    PYTHONPATH = {tox_root}:{tox_root}/lib:{[vars]src_path}
+    PYTHONPATH = {tox_root}:{tox_root}/lib:{tox_root}/src
     PY_COLORS = 1
 allowlist_externals =
     poetry
