try using pg 16 rock

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,9 +45,10 @@ jobs:
 
   build:
     name: Build charm
-    uses: canonical/data-platform-workflows/.github/workflows/build_charm.yaml@v23.0.5
+    uses: canonical/data-platform-workflows/.github/workflows/build_charm.yaml@lucas/fix-collect-bases
     with:
-      cache: true
+      cache: false
+      charmcraft-snap-channel: 3.x/stable
 
   integration-test:
     strategy:
