--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,11 +1,9 @@
 type: charm
-bases:
-  - name: ubuntu
-    channel: "22.04"
-    architectures: [amd64]
-  - name: ubuntu
-    channel: "22.04"
-    architectures: [arm64]
+base: ubuntu@24.04
+
+platforms:
+  amd64:
+  arm64:
 parts:
   charm:
     build-snaps:
