--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,11 @@
 # See LICENSE file for licensing details.
 
 options:
+  durability_synchronous_node_count:
+    description: |
+      Sets the number of synchronous nodes to be maintained in the cluster. Should be
+      a positive value.
+      type: integer
   durability_synchronous_commit:
     description: |
       Sets the current transactions synchronization level. This charm allows only the
