--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ options:
   synchronous_node_count:
     description: |
       Sets the number of synchronous nodes to be maintained in the cluster. Should be
-      either "all", "minority", "majority" or a positive value.
+      either "all", "majority" or a positive value.
     type: string
     default: "all"
   durability_synchronous_commit:
