--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,22 +57,16 @@ jobs:
           - agent: 2.9.51  # renovate: juju-agent-pin-minor
             libjuju: ==2.9.49.1  # renovate: latest libjuju 2
             allure_on_amd64: false
-          - agent: 3.4.6  # renovate: juju-agent-pin-minor
+          - agent: 3.6.1  # renovate: juju-agent-pin-minor
             allure_on_amd64: true
-          - snap_channel: 3.6/stable
-            allure_on_amd64: false
         architecture:
           - amd64
         include:
           - juju:
-              agent: 3.4.6  # renovate: juju-agent-pin-minor
+              agent: 3.6.1  # renovate: juju-agent-pin-minor
               allure_on_amd64: true
             architecture: arm64
-          - juju:
-              snap_channel: 3.6/stable
-              allure_on_amd64: false
-            architecture: arm64
-    name: Integration | ${{ matrix.juju.agent || matrix.juju.snap_channel }} | ${{ matrix.architecture }}
+    name: Integration | ${{ matrix.juju.agent }} | ${{ matrix.architecture }}
     needs:
       - lint
       - unit-test
