--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ description = Apply coding style standards to code
 commands_pre =
     poetry install --only format --no-root
 commands =
-    poetry lock --no-update
+    poetry lock
     poetry run ruff check --fix {[vars]all_path}
     poetry run ruff format {[vars]all_path}
 
@@ -55,10 +55,6 @@ commands =
 
 [testenv:integration]
 description = Run integration tests
-set_env =
-    {[testenv]set_env}
-    # Workaround for https://github.com/python-poetry/poetry/issues/6958
-    POETRY_INSTALLER_PARALLEL = false
 pass_env =
     CI
     GITHUB_OUTPUT
