Remove unused dependencies
Removed dependencies that are unused or in the wrong dependency group

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,11 @@ requires-poetry = ">=2.0.0"
 [tool.poetry.dependencies]
 python = "^3.10"
 ops = "^2.17.0"
-cryptography = "^44.0.0"
 boto3 = "^1.35.70"
 pgconnstr = "^1.0.1"
 requests = "^2.32.3"
 tenacity = "^9.0.0"
-cosl = "^0.0.45"
 pydantic = "^1.10.19"
-poetry-core = "^2.0.0"
-jsonschema = "^4.23.0"
 jinja2 = "^3.1.4"
 lightkube = "^0.15.5"
 lightkube-models = "^1.28.1.4"
@@ -28,13 +24,15 @@ ops = ">=2.0.0"
 # data_platform_libs/v0/upgrade.py
 poetry-core = "*"
 # data_platform_libs/v0/upgrade.py requires pydantic ^1.10
-# grafana_agent/v0/cos_agent.py requires pydantic <2
-# tempo_coordinator_k8s/v0/tracing.py supports both pydantic <2 and pydantic 2
-pydantic = "^1.10, <2"
-# grafana_agent/v0/cos_agent.py
+# tempo_coordinator_k8s/v0/tracing.py requires pydantic
+pydantic = "^1.10"
+# loki_k8s/v1/loki_push_api.py and prometheus_k8s/v0/prometheus_scrape.py
 cosl = "*"
 # tempo_coordinator_k8s/v0/charm_tracing.py
 opentelemetry-exporter-otlp-proto-http = "1.21.0"
+# tls_certificates_interface/v2/tls_certificates.py
+cryptography = "*"
+jsonschema = "*"
 
 [tool.poetry.group.format]
 optional = true
@@ -53,11 +51,7 @@ optional = true
 
 [tool.poetry.group.unit.dependencies]
 coverage = {extras = ["toml"], version = "^7.6.8"}
-pydantic = "^1.10.19"
 pytest = "^8.3.3"
-pytest-mock = "^3.14.0"
-pytest-asyncio = "*"
-parameterized = "^0.9.0"
 
 [tool.poetry.group.integration]
 optional = true
