--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ requires-poetry = ">=2.0.0"
 [tool.poetry.dependencies]
 python = "^3.10"
 ops = "^2.17.1"
-boto3 = "^1.36.4"
+boto3 = "^1.35.70"
 pgconnstr = "^1.0.1"
 requests = "^2.32.3"
 tenacity = "^9.0.0"
@@ -67,7 +67,7 @@ allure-pytest-collection-report = {git = "https://github.com/canonical/data-plat
 # renovate caret doesn't work: https://github.com/renovatebot/renovate/issues/26940
 juju = "<=3.6.1.0"
 psycopg2-binary = "^2.9.10"
-boto3 = "^1.36.4"
+boto3 = "*"
 tenacity = "^9.0.0"
 allure-pytest = "^2.13.5"
 
