--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,7 @@ jobs:
       matrix:
         juju:
           - agent: 3.6.2  # renovate: juju-agent-pin-minor
+            libjuju: ==3.6.1.0  # renovate: latest libjuju 2
             allure_on_amd64: true
         architecture:
           - amd64
@@ -79,6 +80,7 @@ jobs:
       cloud: microk8s
       microk8s-snap-channel: 1.32-strict/stable  # renovate: latest microk8s
       juju-agent-version: ${{ matrix.juju.agent }}
+      libjuju-version-constraint: ${{ matrix.juju.libjuju }}
       _beta_allure_report: ${{ matrix.juju.allure_on_amd64 && matrix.architecture == 'amd64' }}
     secrets:
       integration-test: |
