--- a/actions.yaml
+++ b/actions.yaml
@@ -34,8 +34,13 @@ list-backups:
 pre-upgrade-check:
   description: Run necessary pre-upgrade checks and preparations before executing a charm refresh.
 promote-to-primary:
-  description: Promotes the cluster of choice to a primary cluster. Must be ran against the leader unit.
+  description: Promotes the cluster of choice to a primary cluster. Must be ran against the leader unit when promoting a cluster
+   or against the unit to be promoted within the cluster.
   params:
+    scope:
+      type: string
+      default: unit
+      description: Whether to promote a unit or a cluster. Must be set to either unit or cluster.
     force:
       type: boolean
       description: Force the promotion of a cluster when there is already a primary cluster.
