Use `charmcraft test` & concierge

--- a/tox.ini
+++ b/tox.ini
@@ -57,8 +57,10 @@ commands =
 description = Run integration tests
 pass_env =
     CI
-    GITHUB_OUTPUT
-    SECRETS_FROM_GITHUB
+    AWS_ACCESS_KEY
+    AWS_SECRET_KEY
+    GCP_ACCESS_KEY
+    GCP_SECRET_KEY
 commands_pre =
     poetry install --only integration --no-root
 commands =
