--- a/tests/spread/test_rollback_to_master_label.py/task.yaml
+++ b/tests/spread/test_rollback_to_master_label.py/task.yaml
@@ -5,3 +5,7 @@ execute: |
   tox run -e integration -- "tests/integration/$TEST_MODULE" --model testing --alluredir="$SPREAD_TASK/allure-results"
 artifacts:
   - allure-results
+variants:
+  - -juju29
+systems:
+  - -ubuntu-24.04-arm
