--- a/actions.yaml
+++ b/actions.yaml
@@ -39,7 +39,7 @@ promote-to-primary:
   params:
     scope:
       type: string
-      default: unit
+      default: cluster
       description: Whether to promote a unit or a cluster. Must be set to either unit or cluster.
     force:
       type: boolean
