--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ cosl = ">=0.0.50"
 opentelemetry-exporter-otlp-proto-http = "1.21.0"
 # tls_certificates_interface/v2/tls_certificates.py
 cryptography = "*"
+# certificate_transfer_interface/v0/certificate_transfer.py
+# tls_certificates_interface/v2/tls_certificates.py
 jsonschema = "*"
 
 [tool.poetry.group.format]
