--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,7 @@ exclude_lines = [
 minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
-markers = ["juju2", "juju3", "juju_secrets"]
+markers = ["juju3", "juju_secrets"]
 
 # Formatting tools configuration
 [tool.black]
