Add wal_keep_size config option
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/config.yaml
+++ b/config.yaml
@@ -15,6 +15,12 @@ options:
       crashes and there are replicas.
     type: string
     default: "on"
+  durability_wal_keep_size:
+    description: |
+      Sets the minimum size of the WAL file to be kept for the replication.
+      Allowed values are: from 0 to 2147483647.
+    type: int
+    default: 4096
   instance_default_text_search_config:
     description: |
       Selects the text search configuration that is used by those variants of the text
