--- a/.github/workflows/check_pr.yaml
+++ b/.github/workflows/check_pr.yaml
@@ -11,8 +11,9 @@ on:
       - edited
     branches:
       - main
+      - '*/edge'
 
 jobs:
   check-pr:
     name: Check pull request
-    uses: canonical/data-platform-workflows/.github/workflows/check_charm_pr.yaml@v30.2.0
+    uses: canonical/data-platform-workflows/.github/workflows/check_charm_pr.yaml@v31.0.0
