--- a/metadata.yaml
+++ b/metadata.yaml
@@ -63,7 +63,7 @@ requires:
     interface: tls-certificates
     limit: 1
     optional: true
-  send-ca-cert:
+  receive-ca-cert:
     interface: certificate_transfer
     optional: true
   s3-parameters:
