--- a/config.yaml
+++ b/config.yaml
@@ -32,6 +32,12 @@ options:
       crashes and there are replicas.
     type: string
     default: "on"
+  durability_wal_keep_size:
+    description: |
+      Sets the minimum size of the WAL file to be kept for the replication.
+      Allowed values are: from 0 to 2147483647.
+    type: int
+    default: 4096
   experimental_max_connections:
     type: int
     description: |
