[DPE-6344] LDAP II: Include charm libs (#883)

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -63,8 +63,15 @@ requires:
     interface: tls-certificates
     limit: 1
     optional: true
+  receive-ca-cert:
+    interface: certificate_transfer
+    optional: true
   s3-parameters:
     interface: s3
+    limit: 1
+    optional: true
+  ldap:
+    interface: ldap
     limit: 1
     optional: true
   logging:
