--- a/actions.yaml
+++ b/actions.yaml
@@ -1,6 +1,16 @@
 # Copyright 2023 Canonical Ltd.
 # See LICENSE file for licensing details.
 
+# TODO: add descriptions for logical replication actions
+
+add-publication:
+  params:
+    name:
+      type: string
+    database:
+      type: string
+    tables:
+      type: string
 create-backup:
   description: Creates a backup to s3 storage in AWS.
   params:
@@ -31,6 +41,8 @@ get-password:
         Possible values - backup, operator, replication, rewind, patroni.
 list-backups:
   description: Lists backups in s3 storage in AWS.
+list-publications:
+list-subscriptions:
 pre-upgrade-check:
   description: Run necessary pre-upgrade checks and preparations before executing a charm refresh.
 promote-to-primary:
@@ -44,6 +56,10 @@ promote-to-primary:
     force:
       type: boolean
       description: Force the promotion of a cluster when there is already a primary cluster.
+remove-publication:
+  params:
+    name:
+      type: string
 restore:
   description: Restore a database backup using pgBackRest.
     S3 credentials are retrieved from a relation with the S3 integrator charm.
@@ -73,3 +89,11 @@ set-tls-private-key:
     private-key:
       type: string
       description: The content of private key for communications with clients. Content will be auto-generated if this option is not specified.
+subscribe:
+  params:
+    name:
+      type: string
+unsubscribe:
+  params:
+    name:
+      type: string
