--- a/metadata.yaml
+++ b/metadata.yaml
@@ -43,6 +43,9 @@ provides:
     interface: postgresql_async
     limit: 1
     optional: true
+  logical-replication-offer:
+    interface: postgresql_logical_replication
+    optional: true
   database:
     interface: postgresql_client
   db:
@@ -57,6 +60,10 @@ provides:
 requires:
   replication:
     interface: postgresql_async
+    limit: 1
+    optional: true
+  logical-replication:
+    interface: postgresql_logical_replication
     limit: 1
     optional: true
   certificates:
