[DPE-6344] LDAP III: Define config and handlers (#886)

--- a/config.yaml
+++ b/config.yaml
@@ -69,6 +69,12 @@ options:
       Enable synchronized sequential scans.
     type: boolean
     default: true
+  ldap_search_filter:
+    description: |
+      The LDAP search filter to match users with.
+      Example: (|(uid=$username)(email=$username))
+    type: string
+    default: "(uid=$username)"
   logging_client_min_messages:
     description: |
       Sets the message levels that are sent to the client.
